Added onChange method

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <div>THIS IS THE WAY</div>
-    <div style="width: 500px;" id="root">
+    <!-- <div>THIS IS THE WAY</div> -->
+    <div  id="root">
       <!-- <div class="emails-input">
         <div class="emails-input__tag">
           <span>asdasd@asd.com</span>
