added replaceAll method

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <button id="test" type="button" >test</button>
     <!-- <div>THIS IS THE WAY</div> -->
     <div  id="root">
       <!-- <div class="emails-input">
