--- a/index.html
+++ b/index.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
-    <button id="test" type="button" >test</button>
-    <!-- <div>THIS IS THE WAY</div> -->
-    <div  id="root">
-      <!-- <div class="emails-input">
-        <div class="emails-input__tag">
-          <span>asdasd@asd.com</span>
-          <span>x</span>
+    <div class="board-share">
+      <div class="board-share__info">
+        <div class="board-share__title">
+          Share <span class="board-share__title--bold">Cool Board</span> with
+          others
         </div>
-        <div class="emails-input__tag">
-          <span>asdasd@asd.com</span>
-          <span>x</span>
-        </div>
-        <div class="emails-input__tag">
-          <span>asdasd@asd.com</span>
-          <span>x</span>
-        </div>
-        <div class="emails-input__tag emails-input__tag--invalid">
-          <span>asdasd@asd.com</span>
-          <span>x</span>
-        </div>
-        <div class="emails-input__tag">
-          <span>asdasd@asd.com</span>
-          <span>x</span>
-        </div>
-        <input
-          class="emails-input__input"
-          type="text"
-          placeholder="add more people..."
-        /> -->
+        <div id="emails"></div>
+      </div>
+
+      <div class="board-share__actions">
+        <button class="board-share__button">Add email</button>
+        <button class="board-share__button">Get emails count</button>
       </div>
     </div>
 
