implemented get emails count

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       </div>
 
       <div class="board-share__actions">
-        <button class="board-share__button">Add email</button>
-        <button class="board-share__button">Get emails count</button>
+        <button id="btnAddEmail" class="board-share__button">Add email</button>
+        <button id="btnEmailCount" class="board-share__button">
+          Get emails count
+        </button>
       </div>
     </div>
 
